--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vue-youtube-embed": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
